fix: update styles for summary chart and column to handle overflow in table

--- a/src/app/shared/components/badge-risk-level/badge-risk-level.component.scss
+++ b/src/app/shared/components/badge-risk-level/badge-risk-level.component.scss
@@ -1,3 +1,8 @@
+:host {
+  justify-content: center;
+  display: flex;
+}
+
 .risk-badge {
   padding: 2px 8px;
   border-radius: 4px;
